<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lightsout.riz.com.lightsout.MainActivity"
    android:scrollbars="vertical"
    android:overScrollMode="always">

    <!--<include layout="@layout/display_layout"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_width="match_parent"/>-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Hello World!" />-->


    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/main_scroll"-->
        <!--android:scrollbars="vertical"-->
        <!--android:overScrollMode="ifContentScrolls">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction"
                android:id="@+id/P1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading1"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:id="@+id/P2"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:id="@+id/P3">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/edit_intro"
                    android:scaleType="fitStart"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_content_description_open"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/drag_intro"
                    android:scaleType="fitStart"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_content_description_drag"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/note"
                android:textStyle="bold"
                android:id="@+id/P4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/post_intodiction"
                android:id="@+id/P5"/>

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:text="@string/dump"-->
                <!--android:id="@+id/P6"/>-->

        </LinearLayout>
    <!--</ScrollView>-->

</ScrollView>
